--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
     "react-dom": "18.2.0",
     "react-quill": "^2.0.0",
     "swr": "^2.2.4"
+  },
+  "devDependencies": {
+    "encoding": "^0.1.13"
   }
 }
